--- a/KS8/mssql-plat-depl.yaml
+++ b/KS8/mssql-plat-depl.yaml
@@ -13,27 +13,27 @@ spec:
         app: mssql
     spec:
       containers:
-        -name: mssql
-        image: mcr.microsoft.com/mssql/server:2022-latest
-        ports:
-          -containerPort: 1433
-        env:
-        - name: MSSQL_PID
-          value: "Express"
-        - name: ACCEPT_EULA
-          value: "Y"
-        - name: SA_PASSWORD
-          valueFrom:
-              secretKeyRef:
-                name: mssql
-                key: SA_PASSWORD            
-        volumeMounts:
-          - mountPath: /var/opt/mssql/data
-            name: mssqldb
+        - name: mssql
+          image: mcr.microsoft.com/mssql/server:2022-latest
+          ports:
+           - containerPort: 1433
+          env:
+          - name: MSSQL_PID
+            value: "Express"
+          - name: ACCEPT_EULA
+            value: "Y"
+          - name: SA_PASSWORD
+            valueFrom:
+               secretKeyRef:
+                 name: mssql
+                 key: SA_PASSWORD            
+          volumeMounts:
+           - mountPath: /var/opt/mssql/data
+             name: mssqldb
       volumes:
-        - name: mssqldb
-          persistentVolumeClaim:
-            claimName: mssql-claim
+      - name: mssqldb
+        persistentVolumeClaim:
+          claimName: mssql-claim
 ---
 apiVersion: v1
 kind: Service
@@ -46,5 +46,18 @@ spec:
   ports:
     - name: mssql
       protocol: TCP
+      port: 1433
+      targetPort: 1433
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: mssql-loadbalancer
+spec:
+  type: LoadBalancer
+  selector:
+    app: mssql
+  ports:
+    - protocol: TCP
       port: 1433
       targetPort: 1433
