--- a/KS8/platforms-depl.yaml
+++ b/KS8/platforms-depl.yaml
@@ -29,3 +29,7 @@ spec:
       protocol: TCP
       port: 80
       targetPort: 80
+    - name: platformgrpc
+      protocol: TCP
+      port: 555
+      targetPort: 555
